# LTCV

./: .gitignore  CImgProc.cpp  CImgProc.h  CImgProcAdv.cpp  CImgProcAdv.h  CImgProcBase.cpp  CImgProcBase.h  CImgProcCus.cpp  CImgProcCus.h  CImgProcFilter.cpp  CImgProcFilter.h  CImgProcMph.cpp  CImgProcMph.h  CImgProcRegister.h  CMakeLists.txt  CMyDef.cpp  CMyDef.h  CWidget2D.cpp  CWidget2D.h  Label2D.7z  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qt-exe-pack.iss  version.txt
hist/20240706/: CImgProc.cpp  CImgProc.h  CImgProcBase.cpp  CImgProcBase.h  CImgProcRegister.h  CMakeLists.txt  CMyDef.cpp  CMyDef.h  CWidget2D.cpp  CWidget2D.h  Resource.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui  readme.txt  version.txt
